@@ -53,6 +53,10 @@ commands:
     permission: jail.command.votejail
     usage: /votejail <player>
     aliases: ["jailvote"]
+  jailmine:
+    description: Manage mines of jails
+    permission: jail.command.jailmine
+    usage: /jailmine reset|set|remove|check <jail(mine)>
     
 permission:
   jail.command.setjail:
@@ -82,6 +86,9 @@ permission:
   jail.command.bail:
     default: true
     description: Allows jailed players to bail
+  jail.command.jailmine:
+    default: op
+    description: Allows admins to manage mine inside jails
   jail.command.votejail:
     default: true
     description: Allows players to vote someone who behaves badly into jail
