@@ -56,5 +56,12 @@
 	"sign.not.jailed": "&cYou are not jailed!",
 	"mine.set.success": "&aMine set successfully!",
 	"mine.set.tap.corner.1": "&eNow tap on the 1st corner of the mine",
-	"mine.set.tap.corner.2": "&eNow tap on the 2nd corner of the mine"
+	"mine.set.tap.corner.2": "&eNow tap on the 2nd corner of the mine",
+	"mine.item.count.notEnough": "&eYour hand does not hold any valid blocks to sell!",
+	"mine.item.notAvailable": "&eThe item on your hand is not available to be sold!",
+	"mine.sellHand.success": "&aYou sold %blocksSold% ores => +$%moneyEarned% => Money you have: $%totalMoney%",
+	"mine.not.set": "&cMine isn't set in this jail!",
+	"mine.set.initialization": "&aInitialized mine set procedure for jail '%jail%'",
+	"mine.remove.successful": "&aRemoved mine successfully for jail '%jail%'",
+	"mine.is.set": "&eMine is set in this jail!"
 }
