@@ -19,9 +19,9 @@
 
 namespace hoyinm14mc\jail\economy;
 
-use hoyinm14mc\jail\Jail;
 use hoyinm14mc\jail\base\BaseEconomy;
 use pocketmine\Player;
+use pocketmine\item\Item;
 
 class Pocketmoney extends BaseEconomy
 {
@@ -42,6 +42,27 @@ class Pocketmoney extends BaseEconomy
         $this->getPlugin()->unjail(strtolower($player->getName()));
         $player->sendMessage($this->getPlugin()->getMessage("unjail.you.success"));
         $player->sendMessage(str_replace("%deduction%", ($t[strtolower($player->getName())]["seconds"] * ($this->getPlugin()->getConfig()->get("bail-per-second")) + 1), str_replace("%remaining%", $this->getPlugin()->getEco()->getMoney(strtolower($player->getName())), $this->getPlugin()->getMessage("bail.money.remaining"))));
+    }
+
+    public function sellHand(Player $player): bool
+    {
+        if ($this->getPlugin()->isJailed($player->getName()) !== true) {
+            $player->sendMessage($this->getPlugin()->getMessage("you.not.jailed"));
+            return false;
+        }
+        $item = $player->getInventory()->getItemInHand();
+        if ($item->getCount() < 1) {
+            $player->sendMessage($this->getPlugin()->getMessage("mine.item.count.notEnough"));
+            return false;
+        }
+        if ($item->getId() != $this->getPlugin()->getConfig("item")) {
+            $player->sendMessage($this->getPlugin()->getMessage("mine.item.notAvailable"));
+            return false;
+        }
+        $this->getPlugin()->getEco()->setMoney(strtolower($player->getName()), $this->getPlugin()->getEco()->getMoney(strtolower($player->getName())) + $item->getCount() * $this->getPlugin()->getConfig()->get("money-per-block"));
+        $player->getInventory()->setItemInHand(Item::get(0));
+        $player->sendMessage(str_replace("%moneyEarned%", $item->getCount() * $this->getPlugin()->getConfig()->get("money-per-block"), str_replace("%totalMoney%", $this->getPlugin()->getEco()->getMoney(strtolower($player->getName())), str_replace("%blocksSold%", $item->getCount(), $this->getPlugin()->getMessage("mine.sellHand.success")))));
+        return true;
     }
 
 }
