@@ -15,6 +15,8 @@ Alpha0.3.0
 - Prisoners' gamemode will be set to 0 instead of 2
 - Added 'jail.modify.bypass' perm-node (detail in plugin.yml)
 - Fixed block-break detection (warning broadcasting issue)
+- Fixed player-escape-warning overlapping the timer GUI
+- Implemented prisoner inventory saver
 
 Alpha0.2.3
 - Fixed '/votejail' command not working for normal players
